# otus_cpp_7

./: .travis.yml  CMakeLists.txt  README.md  bulk.cpp  logger.h
data/: test5.out.txt
include/: command.h
src/: bulk.cpp  command.cpp  logger.cpp
test/: test_bulk.cpp
test/data/: test5.in.txt
